PR/44030: Onno van der Linden: ifreqn2o gets called with the parameters the wrong way around in /sys/net/if.c